--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Test</title>
+    <title>Document</title>
+
+    <style>
+
+
+    </style>
 </head>
 <body>
-    <h1>Şükslovakya</h1>
+    <h1 style="color:red;">Şükslovakya</h1>
     <h1>Şükoslavakya</h1>
     <h1>Şükoslavakya</h1>
     <h1>Şükslovakya</h1>
